Make emerged town cases playable
